fixed spacing

--- a/src/app/components/cart-add/cart-add.component.css
+++ b/src/app/components/cart-add/cart-add.component.css
@@ -23,12 +23,12 @@
     grid-column-end: 2;
     max-width: 200px;
     max-height: 200px;
+    margin-top: 100px;
   }
   .item2 {
     grid-column-start: 2;
     grid-column-end: 3;
-    margin-top: 200px;
-    max-height: -50px;
+    margin-top: 150px;
   }
   .item3 {
     grid-column-start: 2;
